Bug 736887: Fix compiler warning in nsHttpChannel.cpp: warning C4244: 'argument' : conversion from 'double' to 'PRTime', possible loss of data, r=cbiesinger

--HG--
extra : rebase_source : 7c100821353b77133108e08f6bf0fd53195c0f9a